--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ core-animated-pages {
 
 core-animated-pages > * {
   border-radius: 5px;
-  font-size: 50px;
   background-color: white;
+  padding: 16px;
+  overflow-y: auto;
 }
 
 body /deep/ core-toolbar {
@@ -21,16 +22,20 @@ body /deep/ core-toolbar {
   color: #fff;
 }
 
+nav {
+  overflow-y: auto;
+}
+
 core-menu {
   color: #01579b;
   margin: 10px 0 0 0;
 }
 
-core-menu > paper-item {
+core-menu > chartbook-item {
   transition: all 300ms ease-in-out;
 }
 
-core-menu > paper-item.core-selected {
+core-menu > chartbook-item.core-selected {
   background: #e1f5fe;
 }
 
