--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,40 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
 body {
-  font-family: "RobotoDraft";
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+img {
+  margin: 0;
+}
+
+h1 {
+  font-size: 36px;
   font-weight: 300;
+  line-height: 44px;
+  margin: 0;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  margin: 0;
+}
+
+p {
+  margin-top: 0;
 }
 
 core-animated-pages {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   -webkit-user-select: none;
   overflow: hidden;
 }
 
 core-animated-pages > * {
-  border-radius: 5px;
   background-color: white;
   padding: 16px;
   overflow-y: auto;
