--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,14 @@ core-animated-pages > * {
   overflow-y: auto;
 }
 
+body /deep/ core-scaffold core {
+  background-color: #183c4f;
+}
+
 body /deep/ core-toolbar {
-  background-color: #03a9f4;
+  background-color: #183c4f;
   color: #fff;
+  font-size: 16px;
 }
 
 nav {
@@ -67,4 +72,9 @@ core-menu > chartbook-item.core-selected {
     width: 100%;
     height: 100%;
   }
+}
+
+.tf-logo {
+  padding: 10px;
+  width:40%;
 }
