--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,16 @@ img {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 300;
-  line-height: 44px;
+  line-height: 40px;
   margin: 0;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 32px;
+  line-height: 28px;
   margin: 0;
 }
 
@@ -41,13 +41,12 @@ core-animated-pages > * {
 }
 
 body /deep/ core-scaffold core {
-  background-color: #183c4f;
+  background-color: #183c4f !important;
 }
 
 body /deep/ core-toolbar {
-  background-color: #183c4f;
-  color: #fff;
-  font-size: 16px;
+  background-color: #183c4f !important;
+  color: #fff !important;
 }
 
 core-menu {
@@ -64,14 +63,74 @@ core-menu > chartbook-item.core-selected {
   background: #e1f5fe;
 }
 
-@media all and (max-width: 480px) {
+.page-container {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.wide {
+  width: 100%;
+}
+
+.square {
+  float: left;
+  width: 60%;
+}
+
+.callout {
+  color: #085197;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.chapter {
+  background-color: #4444FF;
+  color: #fff;
+}
+
+.chapter-body {
+  column-count: 2;
+  column-gap: 20px;
+  -moz-column-count: 2;
+  -moz-column-gap: 20px;
+  -webkit-column-count: 2;
+  -webkit-column-gap: 20px;
+}
+
+@media all and (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  h2 {
+    font-size: 18px;
+    line-height: 26px;
+  }
+
   core-animated-pages {
     width: 100%;
     height: 100%;
   }
+
+  .page-container {
+    margin: 0;
+    width: 100%;
+  }
+
+  .chapter-body {
+    column-count: 1;
+    column-gap: 20px;
+    -moz-column-count: 1;
+    -moz-column-gap: 20px;
+    -webkit-column-count: 1;
+    -webkit-column-gap: 20px;
+  }
 }
 
-.tf-logo {
-  padding: 10px;
-  width:40%;
+@media all and (max-width: 1000px) {
+  .square {
+    float: none;
+    width: 100%;
+  }
 }
