--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h2 {
   font-size: 20px;
   font-weight: 700;
   line-height: 28px;
-  margin: 0;
+  margin: 0 0 10px;
 }
 
 p {
@@ -89,6 +89,7 @@ core-menu > chartbook-item.core-selected.chapter-item {
 .square {
   float: left;
   width: 60%;
+  margin: 0 10px 0;
 }
 
 .callout {
@@ -98,7 +99,6 @@ core-menu > chartbook-item.core-selected.chapter-item {
 }
 
 .chapter {
-  background: url(../images/chapter-bg.jpg) no-repeat;
   background-size: cover;
   color: #fff;
 }
