--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,15 @@ core-menu > chartbook-item {
   transition: all 300ms ease-in-out;
 }
 
+core-menu > chartbook-item.intro-item {
+  background-color: #00a0b0;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 3px;
+  padding: 20px 12px;
+  text-transform: uppercase;
+}
+
 core-menu > chartbook-item.chapter-item {
   background-color: #366899;
   color: #fff;
@@ -75,6 +84,11 @@ core-menu > chartbook-item.chapter-item {
 
 core-menu > chartbook-item.core-selected {
   background: #e1f5fe;
+}
+
+core-menu > chartbook-item.core-selected.intro-item {
+  background-color: #35a7b2;
+  color: #fff;
 }
 
 core-menu > chartbook-item.core-selected.chapter-item {
@@ -101,6 +115,17 @@ core-menu > chartbook-item.core-selected.chapter-item {
   color: #085197;
   font-size: 15px;
   font-weight: 700;
+}
+
+.cover {
+  background-image: url(../images/cover-bg.jpg);
+  background-size: cover;
+  color: #fff;
+}
+
+.cover img {
+  margin: 75px 0 0;
+  width:100%
 }
 
 .chapter {
@@ -166,5 +191,9 @@ core-menu > chartbook-item.core-selected.chapter-item {
     column-count: 1;
     -moz-column-count: 1;
     -webkit-column-count: 1;
+  }
+
+  .cover img {
+    margin: 200px 0 0;
   }
 }
