--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,49 @@ core-menu > chartbook-item.core-selected.chapter-item {
 
 }
 
+.share-buttons {
+  margin: rem-calc(0 0 20);
+}
+
+a.social-link {
+  display:inline;
+  background-color: #fff;
+  color: #ccc;
+  text-decoration:none;
+  padding:6px 12px;
+  margin: 0 .5rem 0 0;
+  -webkit-transition: background 0.1s linear;
+  -moz-transition: background 0.1s linear;
+  -ms-transition: background 0.1s linear;
+  -o-transition: background 0.1s linear;
+  transition: background 0.1s linear;
+}
+
+a:hover.facebook {
+  background-color:#4a66b7;
+  color: #fff;
+}
+
+a:hover.twitter {
+  background-color:#00acee;
+  color: #fff;
+}
+
+a:hover.linkedin {
+  background-color:#1b86bc;
+  color: #fff;
+}
+
+a:hover.gplus {
+  background-color:#dd4b38;
+  color: #fff;
+}
+
+a:hover.email {
+  background-color:#ff9600;
+  color: #fff;
+}
+
 @media all and (max-width: 1000px) {
   .square {
     float: none;
@@ -195,5 +238,9 @@ core-menu > chartbook-item.core-selected.chapter-item {
 
   .cover img {
     margin: 200px 0 0;
+  }
+
+  .hide-on-small {
+    display: none;
   }
 }
