--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,12 @@ core-menu > chartbook-item.core-selected.chapter-item {
   color: #fff;
 }
 
+.chapter > .page-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding-top: 30px;
+}
+
 .chapter h1 {
   font-size: 20px;
   font-weight: 700;
@@ -153,12 +159,8 @@ core-menu > chartbook-item.core-selected.chapter-item {
 }
 
 .chapter-body {
-  column-count: 2;
-  column-gap: 20px;
-  -moz-column-count: 2;
-  -moz-column-gap: 20px;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 20px;
+  max-width: 480px;
+  margin: 0 auto;
 }
 
 @media all and (max-width: 600px) {
