--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,11 @@ core-animated-pages > * {
 }
 
 body /deep/ core-scaffold core {
-  background-color: #183c4f !important;
+  background-color: rgb(239,68,56) !important;
 }
 
 body /deep/ core-toolbar {
-  background-color: #183c4f !important;
+  background-color: rgb(239,68,56) !important;
   color: #fff !important;
 }
 
@@ -123,16 +123,22 @@ core-menu > chartbook-item.core-selected.chapter-item {
 
 .cover {
   background-image: url(../images/cover-bg.jpg);
+  background-position: center;
   background-size: cover;
   color: #fff;
+  padding: 0;
 }
 
-.cover img {
-  margin: 75px 0 0;
-  width:100%
+.cover .page-container {
+  background-color:rgba(239,68,56,0.9);
+  margin:auto 0;
+  max-height: 50%;
+  padding: 30px 15%;
+  text-align:center;
 }
 
 .chapter {
+  background-position: center;
   background-size: cover;
   color: #fff;
 }
